set(INCLUDE_FILES
  Includes/Pcf/Microsoft/Win32/Registry.hpp
  Includes/Pcf/Microsoft/Win32/RegistryKey.hpp
  Includes/Pcf/Microsoft/Win32/RegistryKeyPermissionCheck.hpp
  Includes/Pcf/Microsoft/Win32/RegistryHive.hpp
  Includes/Pcf/Microsoft/Win32/RegistryOptions.hpp
  Includes/Pcf/Microsoft/Win32/RegistryValueKind.hpp
  Includes/Pcf/Microsoft/Win32/RegistryValueOptions.hpp
  Includes/Pcf/System/Collections/Concurrent/ConcurrentBag.hpp
  Includes/Pcf/System/Collections/Concurrent/ConcurrentQueue.hpp
  Includes/Pcf/System/Collections/Concurrent/ConcurrentStack.hpp
  Includes/Pcf/System/Collections/Concurrent/IProducerConsumerCollection.hpp
  Includes/Pcf/System/Collections/Generic/Comparer.hpp
  Includes/Pcf/System/Collections/Generic/Dictionary.hpp
  Includes/Pcf/System/Collections/Generic/GenericException.hpp
  Includes/Pcf/System/Collections/Generic/HashSet.hpp
  Includes/Pcf/System/Collections/Generic/ICollection.hpp
  Includes/Pcf/System/Collections/Generic/IComparer.hpp
  Includes/Pcf/System/Collections/Generic/IDictionary.hpp
  Includes/Pcf/System/Collections/Generic/IEnumerable.hpp
  Includes/Pcf/System/Collections/Generic/IEnumerator.hpp
  Includes/Pcf/System/Collections/Generic/IList.hpp
  Includes/Pcf/System/Collections/Generic/ISet.hpp
  Includes/Pcf/System/Collections/Generic/KeyValuePair.hpp
  Includes/Pcf/System/Collections/Generic/LinkedList.hpp
  Includes/Pcf/System/Collections/Generic/List.hpp
  Includes/Pcf/System/Collections/Generic/Queue.hpp
  Includes/Pcf/System/Collections/Generic/SortedDictionary.hpp
  Includes/Pcf/System/Collections/Generic/SortedSet.hpp
  Includes/Pcf/System/Collections/Generic/Stack.hpp
  Includes/Pcf/System/Collections/ObjectModel/Collection.hpp
  Includes/Pcf/System/Collections/ObjectModel/ReadOnlyCollection.hpp
  Includes/Pcf/System/Collections/Specialized/StringCollection.hpp
  Includes/Pcf/System/Collections/Specialized/StringDictionary.hpp
  Includes/Pcf/System/Collections/Specialized/StringEnumerator.hpp
  Includes/Pcf/System/Collections/ArrayList.hpp
  Includes/Pcf/System/Collections/BitArray.hpp
  Includes/Pcf/System/Collections/Comparer.hpp
  Includes/Pcf/System/Collections/DictionaryEntry.hpp
  Includes/Pcf/System/Collections/Hashtable.hpp
  Includes/Pcf/System/Collections/ICollection.hpp
  Includes/Pcf/System/Collections/IComparer.hpp
  Includes/Pcf/System/Collections/IDictionary.hpp
  Includes/Pcf/System/Collections/IEnumerable.hpp
  Includes/Pcf/System/Collections/IEnumerator.hpp
  Includes/Pcf/System/Collections/IList.hpp
  Includes/Pcf/System/Collections/Queue.hpp
  Includes/Pcf/System/Collections/Stack.hpp
  Includes/Pcf/System/ComponentModel/InvalidEnumArgumentException.hpp
  Includes/Pcf/System/Diagnostics/ConsoleTraceListener.hpp
  Includes/Pcf/System/Diagnostics/Debug.hpp
  Includes/Pcf/System/Diagnostics/DefaultTraceListener.hpp
  Includes/Pcf/System/Diagnostics/NullTraceListener.hpp
  Includes/Pcf/System/Diagnostics/Process.hpp
  Includes/Pcf/System/Diagnostics/ProcessStartInfo.hpp
  Includes/Pcf/System/Diagnostics/ProcessWindowStyle.hpp
  Includes/Pcf/System/Diagnostics/StackFrame.hpp
  Includes/Pcf/System/Diagnostics/StackTrace.hpp
  Includes/Pcf/System/Diagnostics/Stopwatch.hpp
  Includes/Pcf/System/Diagnostics/TextWriterTraceListener.hpp
  Includes/Pcf/System/Diagnostics/Trace.hpp
  Includes/Pcf/System/Diagnostics/TraceEventCache.hpp
  Includes/Pcf/System/Diagnostics/TraceEventType.hpp
  Includes/Pcf/System/Diagnostics/TraceFilter.hpp
  Includes/Pcf/System/Diagnostics/TraceListener.hpp
  Includes/Pcf/System/Diagnostics/TraceListenerCollection.hpp
  Includes/Pcf/System/Diagnostics/TraceOptions.hpp
  Includes/Pcf/System/Diagnostics/TraceSource.hpp
  Includes/Pcf/System/Globalization/NumberStyles.hpp
  Includes/Pcf/System/IO/Ports/Handshake.hpp
  Includes/Pcf/System/IO/Ports/Parity.hpp
  Includes/Pcf/System/IO/Ports/SerialData.hpp
  Includes/Pcf/System/IO/Ports/SerialError.hpp
  Includes/Pcf/System/IO/Ports/SerialPinChange.hpp
  Includes/Pcf/System/IO/Ports/SerialPort.hpp
  Includes/Pcf/System/IO/Ports/StopBits.hpp
  Includes/Pcf/System/IO/Ports/SerialDataReceivedEventArgs.hpp
  Includes/Pcf/System/IO/Ports/SerialErrorReceivedEventArgs.hpp
  Includes/Pcf/System/IO/Ports/SerialPinChangedEventArgs.hpp
  Includes/Pcf/System/IO/Ports/SerialDataReceivedEventHandler.hpp
  Includes/Pcf/System/IO/Ports/SerialErrorReceivedEventHandler.hpp
  Includes/Pcf/System/IO/Ports/SerialPinChangedEventHandler.hpp
  Includes/Pcf/System/IO/BinaryReader.hpp
  Includes/Pcf/System/IO/BinaryWriter.hpp
  Includes/Pcf/System/IO/Compression.hpp
  Includes/Pcf/System/IO/Directory.hpp
  Includes/Pcf/System/IO/DirectoryInfo.hpp
  Includes/Pcf/System/IO/DirectoryNotFoundException.hpp
  Includes/Pcf/System/IO/DriveInfo.hpp
  Includes/Pcf/System/IO/DriveNotFoundException.hpp
  Includes/Pcf/System/IO/DriveType.hpp
  Includes/Pcf/System/IO/EndOfStreamException.hpp
  Includes/Pcf/System/IO/ErrorEventArgs.hpp
  Includes/Pcf/System/IO/File.hpp
  Includes/Pcf/System/IO/FileAccess.hpp
  Includes/Pcf/System/IO/FileAttributes.hpp
  Includes/Pcf/System/IO/FileFormatException.hpp
  Includes/Pcf/System/IO/FileInfo.hpp
  Includes/Pcf/System/IO/FileLoadException.hpp
  Includes/Pcf/System/IO/FileNotFoundException.hpp
  Includes/Pcf/System/IO/FileMode.hpp
  Includes/Pcf/System/IO/FileShare.hpp
  Includes/Pcf/System/IO/FileStream.hpp
  Includes/Pcf/System/IO/FileSystemEventArgs.hpp
  Includes/Pcf/System/IO/FileSystemInfo.hpp
  Includes/Pcf/System/IO/InternalBufferOverflowException.hpp
  Includes/Pcf/System/IO/InvalidDataException.hpp
  Includes/Pcf/System/IO/IOException.hpp
  Includes/Pcf/System/IO/IsolatedStorage.hpp
  Includes/Pcf/System/IO/MemoryStream.hpp
  Includes/Pcf/System/IO/Path.hpp
  Includes/Pcf/System/IO/PathTooLongException.hpp  Includes/Pcf/System/IO/Pipes.hpp
  Includes/Pcf/System/IO/PipeException.hpp
  Includes/Pcf/System/IO/SeekOrigin.hpp
  Includes/Pcf/System/IO/Stream.hpp
  Includes/Pcf/System/IO/StreamReader.hpp
  Includes/Pcf/System/IO/StreamWriter.hpp
  Includes/Pcf/System/IO/StringReader.hpp
  Includes/Pcf/System/IO/StringWriter.hpp
  Includes/Pcf/System/IO/TextReader.hpp
  Includes/Pcf/System/IO/TextWriter.hpp
  Includes/Pcf/System/IO/WatcherChangeTypes.hpp
  Includes/Pcf/System/Linq/Enumerable.hpp
  Includes/Pcf/System/Linq/Linq.hpp
  Includes/Pcf/System/Net/Sockets/AddressFamily.hpp
  Includes/Pcf/System/Net/Sockets/IOControlCode.hpp
  Includes/Pcf/System/Net/Sockets/IPv6MulticastOption.hpp
  Includes/Pcf/System/Net/Sockets/LingerOption.hpp
  Includes/Pcf/System/Net/Sockets/MulticastOption.hpp
  Includes/Pcf/System/Net/Sockets/NetworkStream.hpp
  Includes/Pcf/System/Net/Sockets/ProtocolFamily.hpp
  Includes/Pcf/System/Net/Sockets/ProtocolType.hpp
  Includes/Pcf/System/Net/Sockets/SelectMode.hpp
  Includes/Pcf/System/Net/Sockets/Socket.hpp
  Includes/Pcf/System/Net/Sockets/SocketError.hpp
  Includes/Pcf/System/Net/Sockets/SocketFlags.hpp
  Includes/Pcf/System/Net/Sockets/SocketInformation.hpp
  Includes/Pcf/System/Net/Sockets/SocketInformationOptions.hpp
  Includes/Pcf/System/Net/Sockets/SocketOptionLevel.hpp
  Includes/Pcf/System/Net/Sockets/SocketOptionName.hpp
  Includes/Pcf/System/Net/Sockets/SocketShutdown.hpp
  Includes/Pcf/System/Net/Sockets/SocketException.hpp
  Includes/Pcf/System/Net/Sockets/SocketType.hpp
  Includes/Pcf/System/Net/Sockets/UdpClient.hpp
  Includes/Pcf/System/Net/Sockets/TcpClient.hpp
  Includes/Pcf/System/Net/Sockets/TcpListener.hpp
  Includes/Pcf/System/Net/WebSockets/ClientWebSocket.hpp
  Includes/Pcf/System/Net/WebSockets/WebSocket.hpp
  Includes/Pcf/System/Net/WebSockets/WebSocketCloseStatus.hpp
  Includes/Pcf/System/Net/WebSockets/WebSocketMessageType.hpp
  Includes/Pcf/System/Net/WebSockets/WebSocketState.hpp
  Includes/Pcf/System/Net/CookieException.hpp
  Includes/Pcf/System/Net/Dns.hpp
  Includes/Pcf/System/Net/DnsEndPoint.hpp
  Includes/Pcf/System/Net/EndPoint.hpp
  Includes/Pcf/System/Net/IPAddress.hpp
  Includes/Pcf/System/Net/IPEndPoint.hpp
  Includes/Pcf/System/Net/IPHostEntry.hpp
  Includes/Pcf/System/Net/HttpListenerException.hpp
  Includes/Pcf/System/Net/HttpStatusCode.hpp
  Includes/Pcf/System/Net/HttpWebRequest.hpp
  Includes/Pcf/System/Net/HttpWebResponse.hpp
  Includes/Pcf/System/Net/FtpStatusCode.hpp
  Includes/Pcf/System/Net/FtpWebRequest.hpp
  Includes/Pcf/System/Net/FtpWebResponse.hpp
  Includes/Pcf/System/Net/NetworkCredential.hpp
  Includes/Pcf/System/Net/ProtocolViolationException.hpp
  Includes/Pcf/System/Net/SocketAddress.hpp
  Includes/Pcf/System/Net/WebException.hpp
  Includes/Pcf/System/Net/WebRequest.hpp
  Includes/Pcf/System/Net/WebRequestMethods.hpp
  Includes/Pcf/System/Net/WebResponse.hpp
  Includes/Pcf/System/Runtime/Serialization/Formatter.hpp
  Includes/Pcf/System/Runtime/Serialization/IFormatter.hpp
  Includes/Pcf/System/Runtime/Serialization/ISerializable.hpp
  Includes/Pcf/System/Runtime/Serialization/SerializationException.hpp
  Includes/Pcf/System/Runtime/Serialization/SerializationEntry.hpp
  Includes/Pcf/System/Runtime/Serialization/SerializationInfo.hpp
  Includes/Pcf/System/Security/HostProtectionException.hpp
  Includes/Pcf/System/Security/SecureString.hpp
  Includes/Pcf/System/Security/SecurityException.hpp
  Includes/Pcf/System/Security/VerificationException.hpp
  Includes/Pcf/System/Security/XmlSyntaxException.hpp
  Includes/Pcf/System/Text/ASCIIEncoding.hpp
  Includes/Pcf/System/Text/Decoder.hpp
  Includes/Pcf/System/Text/Encoder.hpp
  Includes/Pcf/System/Text/Encoding.hpp
  Includes/Pcf/System/Text/ANSIEncoding.hpp
  Includes/Pcf/System/Text/StringBuilder.hpp
  Includes/Pcf/System/Text/UnicodeEncoding.hpp
  Includes/Pcf/System/Text/UTF8Encoding.hpp
  Includes/Pcf/System/Text/UTF32Encoding.hpp
  Includes/Pcf/System/Threading/AbandonedMutexException.hpp
  Includes/Pcf/System/Threading/AutoResetEvent.hpp
  Includes/Pcf/System/Threading/Barrier.hpp
  Includes/Pcf/System/Threading/BarrierPostPhaseException.hpp
  Includes/Pcf/System/Threading/EventResetMode.hpp
  Includes/Pcf/System/Threading/EventWaitHandle.hpp
  Includes/Pcf/System/Threading/Interlocked.hpp
  Includes/Pcf/System/Threading/LockGuard.hpp
  Includes/Pcf/System/Threading/LockRecursionException.hpp
  Includes/Pcf/System/Threading/ManualResetEvent.hpp
  Includes/Pcf/System/Threading/Monitor.hpp
  Includes/Pcf/System/Threading/Mutex.hpp
  Includes/Pcf/System/Threading/ParameterizedThreadStart.hpp
  Includes/Pcf/System/Threading/RegisteredWaitHandle.hpp
  Includes/Pcf/System/Threading/Semaphore.hpp
  Includes/Pcf/System/Threading/SemaphoreFullException.hpp
  Includes/Pcf/System/Threading/SynchronizationLockException.hpp
  Includes/Pcf/System/Threading/Thread.hpp
  Includes/Pcf/System/Threading/ThreadLocal.hpp
  Includes/Pcf/System/Threading/ThreadAbortException.hpp
  Includes/Pcf/System/Threading/ThreadInterruptedException.hpp
  Includes/Pcf/System/Threading/ThreadPool.hpp
  Includes/Pcf/System/Threading/ThreadPriority.hpp
  Includes/Pcf/System/Threading/ThreadStart.hpp
  Includes/Pcf/System/Threading/ThreadStartException.hpp
  Includes/Pcf/System/Threading/ThreadState.hpp
  Includes/Pcf/System/Threading/ThreadStateException.hpp
  Includes/Pcf/System/Threading/TimeOut.hpp
  Includes/Pcf/System/Threading/TimerCallback.hpp
  Includes/Pcf/System/Threading/Timer.hpp
  Includes/Pcf/System/Threading/TryLockGuard.hpp
  Includes/Pcf/System/Threading/WaitHandle.hpp
  Includes/Pcf/System/Threading/WaitHandleCannotBeOpenedException.hpp
  Includes/Pcf/System/Threading/Tasks/ITask.hpp
  Includes/Pcf/System/Threading/Tasks/Parallel.hpp
  Includes/Pcf/System/Threading/Tasks/Task.hpp
  Includes/Pcf/System/Threading/Tasks/TaskFactory.hpp
  Includes/Pcf/System/Threading/Tasks/TaskStatus.hpp
  Includes/Pcf/System/Threading/Tasks/TaskTResult.hpp
  Includes/Pcf/System/_String.hpp
  Includes/Pcf/System/_String.h
  Includes/Pcf/System/_ustring.hpp
  Includes/Pcf/System/Action.hpp
  Includes/Pcf/System/AccessViolationException.hpp
  Includes/Pcf/System/AggregateException.hpp
  Includes/Pcf/System/AppDomainUnloadedException.hpp
  Includes/Pcf/System/ApplicationException.hpp
  Includes/Pcf/System/ArgumentException.hpp
  Includes/Pcf/System/ArgumentNullException.hpp
  Includes/Pcf/System/ArgumentOutOfRangeException.hpp
  Includes/Pcf/System/ArithmeticException.hpp
  Includes/Pcf/System/Array.hpp
  Includes/Pcf/System/ArraySegment.hpp
  Includes/Pcf/System/ArrayTypeMismatchException.hpp
  Includes/Pcf/System/AsyncCallback.hpp
  Includes/Pcf/System/BadImageFormatException.hpp
  Includes/Pcf/System/BitConverter.hpp
  Includes/Pcf/System/Boolean.hpp
  Includes/Pcf/System/BoxEnum.hpp
  Includes/Pcf/System/Buffer.hpp
  Includes/Pcf/System/Byte.hpp
  Includes/Pcf/System/CannotUnloadAppDomainException.hpp
  Includes/Pcf/System/Char.hpp
  Includes/Pcf/System/CharEnumerator.hpp
  Includes/Pcf/System/Comparison.hpp
  Includes/Pcf/System/Console.hpp
  Includes/Pcf/System/ConsoleCancelEventArgs.hpp
  Includes/Pcf/System/ConsoleCancelEventHandler.hpp
  Includes/Pcf/System/ConsoleColor.hpp
  Includes/Pcf/System/ConsoleKey.hpp
  Includes/Pcf/System/ConsoleKeyInfo.hpp
  Includes/Pcf/System/ConsoleModifiers.hpp
  Includes/Pcf/System/ConsoleSpecialKey.hpp
  Includes/Pcf/System/ContextMarshalException.hpp
  Includes/Pcf/System/Convert.hpp
  Includes/Pcf/System/DataMisalignedException.hpp
  Includes/Pcf/System/DateTime.hpp
  Includes/Pcf/System/DateTimeKind.hpp
  Includes/Pcf/System/DayOfWeek.hpp
  Includes/Pcf/System/Decimal.hpp
  Includes/Pcf/System/Delegate.hpp
  Includes/Pcf/System/DivideByZeroException.hpp
  Includes/Pcf/System/DllNotFoundException.hpp
  Includes/Pcf/System/DuplicateWaitObjectException.hpp
  Includes/Pcf/System/Double.hpp
  Includes/Pcf/System/Environment.hpp
  Includes/Pcf/System/EnvironmentVariableTarget.hpp
  Includes/Pcf/System/EntryPointNotFoundException.hpp
  Includes/Pcf/System/Enum.hpp
  Includes/Pcf/System/EventArgs.hpp
  Includes/Pcf/System/EventHandler.hpp
  Includes/Pcf/System/ExecutionEngineException.hpp
  Includes/Pcf/System/Exception.hpp
  Includes/Pcf/System/FieldAccessException.hpp
  Includes/Pcf/System/FormatException.hpp
  Includes/Pcf/System/Func.hpp
  Includes/Pcf/System/Guid.hpp
  Includes/Pcf/System/Hash.hpp
  Includes/Pcf/System/IAsyncResult.hpp
  Includes/Pcf/System/ICloneable.hpp
  Includes/Pcf/System/IComparable.hpp
  Includes/Pcf/System/IConvertible.hpp
  Includes/Pcf/System/ICustomFormatter.hpp
  Includes/Pcf/System/IFormatProvider.hpp
  Includes/Pcf/System/IFormattable.hpp
  Includes/Pcf/System/IndexOutOfRangeException.hpp
  Includes/Pcf/System/InsufficientExecutionStackException.hpp
  Includes/Pcf/System/InsufficientMemoryException.hpp
  Includes/Pcf/System/Int16.hpp
  Includes/Pcf/System/Int32.hpp
  Includes/Pcf/System/Int64.hpp
  Includes/Pcf/System/IntPtr.hpp
  Includes/Pcf/System/InvalidCastException.hpp
  Includes/Pcf/System/InvalidOperationException.hpp
  Includes/Pcf/System/InvalidProgramException.hpp
  Includes/Pcf/System/InvalidTimeZoneException.hpp
  Includes/Pcf/System/Math.hpp
  Includes/Pcf/System/MemberAccessException.hpp
  Includes/Pcf/System/MethodAccessException.hpp
  Includes/Pcf/System/MissingMemberException.hpp
  Includes/Pcf/System/MissingFieldException.hpp
  Includes/Pcf/System/MissingMethodException.hpp
  Includes/Pcf/System/MulticastNotSupportedException.hpp
  Includes/Pcf/System/NotFiniteNumberException.hpp
  Includes/Pcf/System/NotImplementedException.hpp
  Includes/Pcf/System/NotSupportedException.hpp
  Includes/Pcf/System/NullPointerException.hpp
  Includes/Pcf/System/NullReferenceException.hpp
  Includes/Pcf/System/Nullable.hpp
  Includes/Pcf/System/NumberRepresentationBase.hpp
  Includes/Pcf/System/NumericalFormat.hpp
  Includes/Pcf/System/NumericalParsing.hpp
  Includes/Pcf/System/FormatProvider.hpp
  Includes/Pcf/System/Object.hpp
  Includes/Pcf/System/ObjectClosedException.hpp
  Includes/Pcf/System/ObjectDisposedException.hpp
  Includes/Pcf/System/OperatingSystem.hpp
  Includes/Pcf/System/OperationCanceledException.hpp
  Includes/Pcf/System/OutOfMemoryException.hpp
  Includes/Pcf/System/OverflowException.hpp
  Includes/Pcf/System/PlatformID.hpp
  Includes/Pcf/System/PlatformNotSupportedException.hpp
  Includes/Pcf/System/Predicate.hpp
  Includes/Pcf/System/Random.hpp
  Includes/Pcf/System/RankException.hpp
  Includes/Pcf/System/SByte.hpp
  Includes/Pcf/System/Single.hpp
  Includes/Pcf/System/String.hpp
  Includes/Pcf/System/StackOverflowException.hpp
  Includes/Pcf/System/StringSplitOptions.hpp
  Includes/Pcf/System/SystemException.hpp
  Includes/Pcf/System/SystemVersion.hpp
  Includes/Pcf/System/TimeoutException.hpp
  Includes/Pcf/System/TimeSpan.hpp
  Includes/Pcf/System/TimeZoneInfo.hpp
  Includes/Pcf/System/TimeZoneNotFoundException.hpp
  Includes/Pcf/System/Tuple.hpp
  Includes/Pcf/System/TupleImpl.hpp
  Includes/Pcf/System/Type.hpp
  Includes/Pcf/System/TypeAccessException.hpp
  Includes/Pcf/System/TypeCode.hpp
  Includes/Pcf/System/TypeInitializationException.hpp
  Includes/Pcf/System/TypeLoadException.hpp
  Includes/Pcf/System/TypeUnloadedException.hpp
  Includes/Pcf/System/UInt16.hpp
  Includes/Pcf/System/UInt32.hpp
  Includes/Pcf/System/UInt64.hpp
  Includes/Pcf/System/UIntPtr.hpp
  Includes/Pcf/System/UnauthorizedAccessException.hpp
  Includes/Pcf/System/Uri.hpp
  Includes/Pcf/System/UriComponents.hpp
  Includes/Pcf/System/UriFormat.hpp
  Includes/Pcf/System/UriFormatException.hpp
  Includes/Pcf/System/UriKind.hpp
  Includes/Pcf/System/UriHostNameType.hpp
  Includes/Pcf/System/UriPartial.hpp
  Includes/Pcf/System/UriTemplateMatchException.hpp
  Includes/Pcf/System/ValueType.hpp
  Includes/Pcf/System/Version.hpp
  Includes/Pcf/Abstract.hpp
  Includes/Pcf/Allocator.hpp
  Includes/Pcf/Any.hpp
  Includes/Pcf/As.hpp
  Includes/Pcf/Async.hpp
  Includes/Pcf/Await.hpp
  Includes/Pcf/Boxing.hpp
  Includes/Pcf/Core.hpp
  Includes/Pcf/Event.hpp
  Includes/Pcf/ExceptionPtr.hpp
  Includes/Pcf/CurrentInformation.hpp
  Includes/Pcf/InitializerList.hpp
  Includes/Pcf/Interface.hpp
  Includes/Pcf/Is.hpp
  Includes/Pcf/LiteralOperatorConverter.hpp
  Includes/Pcf/Lock.hpp
  Includes/Pcf/Move.hpp
  Includes/Pcf/NullType.hpp
  Includes/Pcf/Property.hpp
  Includes/Pcf/Public.hpp
  Includes/Pcf/Ref.hpp
  Includes/Pcf/RefPtr.hpp
  Includes/Pcf/SharedPtr.hpp
  Includes/Pcf/Startup.hpp
  Includes/Pcf/Static.hpp
  Includes/Pcf/Types.hpp
  Includes/Pcf/Undef.hpp
  Includes/Pcf/UniquePtr.hpp
  Includes/Pcf/Unused.hpp
  Includes/Pcf/Using.hpp
  Includes/Pcf/Var.hpp
  Includes/Pcf/__opaque_function_pointer__.hpp
)

set(SOURCE_FILES
  Sources/__OS/CoreApi.hpp
  Sources/__OS/ConsoleGcc.cpp
  Sources/__OS/ConsoleW32.cpp
  Sources/__OS/DateTimeGcc.cpp
  Sources/__OS/DateTimeW32.cpp
  Sources/__OS/DebuggerGcc.cpp
  Sources/__OS/DebuggerW32.cpp
  Sources/__OS/DirectoryGcc.cpp
  Sources/__OS/DirectoryW32.cpp
  Sources/__OS/Dns.cpp
  Sources/__OS/DriveGcc.cpp
  Sources/__OS/DriveW32.cpp
  Sources/__OS/EnvironmentGcc.cpp
  Sources/__OS/EnvironmentW32.cpp
  Sources/__OS/Format.cpp
  Sources/__OS/InterlockedGcc.cpp
  Sources/__OS/InterlockedW32.cpp
  Sources/__OS/ProcessGcc.cpp
  Sources/__OS/ProcessW32.cpp
  Sources/__OS/RegistryGcc.cpp
  Sources/__OS/RegistryW32.cpp
  Sources/__OS/Security.cpp
  Sources/__OS/SocketGcc.cpp
  Sources/__OS/SocketW32.cpp
  Sources/__OS/ThreadGcc.cpp
  Sources/__OS/ThreadW32.cpp
  Sources/__OS/TypeGcc.cpp
  Sources/__OS/TypeW32.cpp
  Sources/__OS/UnicodeCharacters.cpp
  Sources/__OS/UnicodeEncodings.cpp
  Sources/Pcf/Microsoft/Win32/RegistryKeyWin.cpp
  Sources/Pcf/Microsoft/Win32/RegistryKeyAll.cpp
  Sources/Pcf/System/Diagnostics/Debug.cpp
  Sources/Pcf/System/Diagnostics/DefaultTraceListener.cpp
  Sources/Pcf/System/Diagnostics/Process.cpp
  Sources/Pcf/System/Diagnostics/ProcessStartInfo.cpp
  Sources/Pcf/System/Diagnostics/StackFrame.cpp
  Sources/Pcf/System/Diagnostics/StackTrace.cpp
  Sources/Pcf/System/Diagnostics/Stopwatch.cpp
  Sources/Pcf/System/Diagnostics/Trace.cpp
  Sources/Pcf/System/Diagnostics/TraceSource.cpp
  Sources/Pcf/System/IO/Directory.cpp
  Sources/Pcf/System/IO/DirectoryInfo.cpp
  Sources/Pcf/System/IO/DriveInfo.cpp
  Sources/Pcf/System/IO/File.cpp
  Sources/Pcf/System/IO/FileInfo.cpp
  Sources/Pcf/System/IO/FileStream.cpp
  Sources/Pcf/System/IO/FileSystemInfo.cpp
  Sources/Pcf/System/IO/MemoryStream.cpp
  Sources/Pcf/System/IO/Path.cpp
  Sources/Pcf/System/IO/Ports/SerialPort.cpp
  Sources/Pcf/System/IO/Stream.cpp
  Sources/Pcf/System/IO/StreamReader.cpp
  Sources/Pcf/System/IO/StringReader.cpp
  Sources/Pcf/System/IO/StringWriter.cpp
  Sources/Pcf/System/IO/StreamWriter.cpp
  Sources/Pcf/System/IO/TextReader.cpp
  Sources/Pcf/System/IO/TextWriter.cpp
  Sources/Pcf/System/Linq/Linq.cpp
  Sources/Pcf/System/Net/Dns.cpp
  Sources/Pcf/System/Net/DnsEndPoint.cpp
  Sources/Pcf/System/Net/EndPoint.cpp
  Sources/Pcf/System/Net/Internals/curl.cpp
  Sources/Pcf/System/Net/Internals/curl.hpp
  Sources/Pcf/System/Net/IPAddress.cpp
  Sources/Pcf/System/Net/IPEndPoint.cpp
  Sources/Pcf/System/Net/IPHostEntry.cpp
  Sources/Pcf/System/Net/SocketAddress.cpp
  Sources/Pcf/System/Net/HttpWebRequest.cpp
  Sources/Pcf/System/Net/HttpWebResponse.cpp
  Sources/Pcf/System/Net/FtpWebRequest.cpp
  Sources/Pcf/System/Net/FtpWebResponse.cpp
  Sources/Pcf/System/Net/WebRequest.cpp
  Sources/Pcf/System/Net/WebRequestMethods.cpp
  Sources/Pcf/System/Net/WebResponse.cpp
  Sources/Pcf/System/Net/Sockets/Socket.cpp
  Sources/Pcf/System/Net/Sockets/UdpClient.cpp
  Sources/Pcf/System/Net/Sockets/NetworkStream.cpp
  Sources/Pcf/System/Net/Sockets/TcpClient.cpp
  Sources/Pcf/System/Net/Sockets/TcpListener.cpp
  Sources/Pcf/System/Net/WebSockets/ClientWebSocket.cpp
  Sources/Pcf/System/Net/WebSockets/WebSocket.cpp
  Sources/Pcf/System/Security/SecureString.cpp
  Sources/Pcf/System/Text/ANSIEncoding.cpp
  Sources/Pcf/System/Text/ASCIIEncoding.cpp
  Sources/Pcf/System/Text/Decoder.cpp
  Sources/Pcf/System/Text/Encoder.cpp
  Sources/Pcf/System/Text/Encoding.cpp
  Sources/Pcf/System/Text/UnicodeEncoding.cpp
  Sources/Pcf/System/Text/UTF8Encoding.cpp
  Sources/Pcf/System/Text/UTF32Encoding.cpp
  Sources/Pcf/System/Threading/EventWaitHandle.cpp
  Sources/Pcf/System/Threading/Interlocked.cpp
  Sources/Pcf/System/Threading/LockGuard.cpp
  Sources/Pcf/System/Threading/Monitor.cpp
  Sources/Pcf/System/Threading/Mutex.cpp
  Sources/Pcf/System/Threading/Semaphore.cpp
  Sources/Pcf/System/Threading/Thread.cpp
  Sources/Pcf/System/Threading/ThreadPool.cpp
  Sources/Pcf/System/Threading/TryLockGuard.cpp
  Sources/Pcf/System/Threading/WaitHandle.cpp
  Sources/Pcf/System/Threading/Tasks/Task.cpp
  Sources/Pcf/System/__HResults.hpp
  Sources/Pcf/System/ArrayAlgorithms.hpp
  Sources/Pcf/System/BitConverter.cpp
  Sources/Pcf/System/Boolean.cpp
  Sources/Pcf/System/Buffer.cpp
  Sources/Pcf/System/Byte.cpp
  Sources/Pcf/System/Char.cpp
  Sources/Pcf/System/Console.cpp
  Sources/Pcf/System/Convert.cpp
  Sources/Pcf/System/DateTime.cpp
  Sources/Pcf/System/Double.cpp
  Sources/Pcf/System/Environment.cpp
  Sources/Pcf/System/EventArgs.cpp
  Sources/Pcf/System/Exception.cpp
  Sources/Pcf/System/Guid.cpp
  Sources/Pcf/System/Hash.cpp
  Sources/Pcf/System/Int16.cpp
  Sources/Pcf/System/Int32.cpp
  Sources/Pcf/System/Int64.cpp
  Sources/Pcf/System/IntPtr.cpp
  Sources/Pcf/System/Math.cpp
  Sources/Pcf/System/NumericalFormat.cpp
  Sources/Pcf/System/NumericalParsing.cpp
  Sources/Pcf/System/Object.cpp
  Sources/Pcf/System/Random.cpp
  Sources/Pcf/System/Runtime/Serialization/SerializationInfo.cpp
  Sources/Pcf/System/SByte.cpp
  Sources/Pcf/System/SocketInit.hpp
  Sources/Pcf/System/Single.cpp
  Sources/Pcf/System/String.cpp
  Sources/Pcf/System/SystemVersion.cpp
  Sources/Pcf/System/TimeSpan.cpp
  Sources/Pcf/System/TimeZoneInfo.cpp
  Sources/Pcf/System/Type.cpp
  Sources/Pcf/System/UInt16.cpp
  Sources/Pcf/System/UInt32.cpp
  Sources/Pcf/System/UInt64.cpp
  Sources/Pcf/System/UIntPtr.cpp
  Sources/Pcf/System/Uri.cpp
  Sources/Pcf/System/ustring.cpp
  Sources/Pcf/ExceptionPtr.cpp
)

source_group(Documentations REGULAR_EXPRESSION "/Includes/Pcf/Documentations/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Documentations\\DesignPatterns REGULAR_EXPRESSION "/Includes/Pcf/Documentations/DesignPatterns/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Documentations\\Examples REGULAR_EXPRESSION "/Includes/Pcf/Documentations/Examples/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Documentations\\FrameworkDesignGuidelines REGULAR_EXPRESSION "/Includes/Pcf/Documentations/FrameworkDesignGuidelines/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Documentations\\FrameworkDesignGuidelines\\NamingGuidelines REGULAR_EXPRESSION "/Includes/Pcf/Documentations/FrameworkDesignGuidelines/NamingGuidelines/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Documentations\\FrameworkDesignGuidelines\\TypeDesignGuidelines REGULAR_EXPRESSION "/Includes/Pcf/Documentations/FrameworkDesignGuidelines/TypeDesignGuidelines/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Documentations\\FrameworkDesignGuidelines\\MemberDesignGuidelines REGULAR_EXPRESSION "/Includes/Pcf/Documentations/FrameworkDesignGuidelines/MemberDesignGuidelines/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Documentations\\Tutorials REGULAR_EXPRESSION "/Includes/Pcf/Documentations/Tutorials/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\Microsoft\\Win32 REGULAR_EXPRESSION "/Includes/Pcf/Microsoft/Win32/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\Microsoft REGULAR_EXPRESSION "/Includes/Pcf/Microsoft/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Collections\\Concurrent REGULAR_EXPRESSION "/Includes/Pcf/System/Collections/Concurrent/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Collections\\Internal REGULAR_EXPRESSION "/Includes/Pcf/System/Collections/Internal/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Collections\\Generic REGULAR_EXPRESSION "/Includes/Pcf/System/Collections/Generic/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Collections\\ObjectModel REGULAR_EXPRESSION "/Includes/Pcf/System/Collections/ObjectModel/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Collections\\Specialized REGULAR_EXPRESSION "/Includes/Pcf/System/Collections/Specialized/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Collections REGULAR_EXPRESSION "/Includes/Pcf/System/Collections/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\ComponentModel REGULAR_EXPRESSION "/Includes/Pcf/System/ComponentModel/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Diagnostics REGULAR_EXPRESSION "/Includes/Pcf/System/Diagnostics/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Globalization REGULAR_EXPRESSION "/Includes/Pcf/System/Globalization/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\IO\\Ports REGULAR_EXPRESSION "/Includes/Pcf/System/IO/Ports/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\IO REGULAR_EXPRESSION "/Includes/Pcf/System/IO/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Linq REGULAR_EXPRESSION "/Includes/Pcf/System/Linq/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Net\\Sockets REGULAR_EXPRESSION "/Includes/Pcf/System/Net/Sockets/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Net\\WebSockets REGULAR_EXPRESSION "/Includes/Pcf/System/Net/WebSockets/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Net REGULAR_EXPRESSION "/Includes/Pcf/System/Net/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Security REGULAR_EXPRESSION "/Includes/Pcf/System/Security/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Runtime\\Serialization REGULAR_EXPRESSION "/Includes/Pcf/System/Runtime/Serialization/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Runtime REGULAR_EXPRESSION "/Includes/Pcf/System/Runtime/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Text REGULAR_EXPRESSION "/Includes/Pcf/System/Text/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Threading REGULAR_EXPRESSION "/Includes/Pcf/System/Threading/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System\\Threading\\Tasks REGULAR_EXPRESSION "/Includes/Pcf/System/Threading/Tasks/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf\\System REGULAR_EXPRESSION "/Includes/Pcf/System/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf REGULAR_EXPRESSION "/Includes/Pcf/[-_,A-Za-z0-9]+\\.hpp*")
source_group(Includes\\Pcf REGULAR_EXPRESSION "/Includes/Pcf/[-_,A-Za-z0-9]")
source_group(Includes REGULAR_EXPRESSION "/Includes/[-_,A-Za-z0-9]+\\.hpp*")

source_group(Sources\\Pcf\\Microsoft\\Win32 REGULAR_EXPRESSION "/Sources/Pcf/Microsoft/Win32/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\Microsoft REGULAR_EXPRESSION "/Sources/Pcf/Microsoft/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\__OS REGULAR_EXPRESSION "/Sources/__OS/[-_,A-Za-z0-9]+\\.*")
source_group(Sources\\Pcf\\System\\Collections\\Internal REGULAR_EXPRESSION "/Sources/Pcf/System/Collections/Internal/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Collections REGULAR_EXPRESSION "/Sources/Pcf/System/Collections/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\ComponentModel REGULAR_EXPRESSION "/Sources/Pcf/System/ComponentModel/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Diagnostics REGULAR_EXPRESSION "/Sources/Pcf/System/Diagnostics/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\IO\\Ports REGULAR_EXPRESSION "/Sources/Pcf/System/IO/Ports/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\IO REGULAR_EXPRESSION "/Sources/Pcf/System/IO/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Linq REGULAR_EXPRESSION "/Sources/Pcf/System/Linq/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Net\\Internals REGULAR_EXPRESSION "/Sources/Pcf/System/Net/Internals/[-_,A-Za-z0-9]+\\.(c*|h*)")
source_group(Sources\\Pcf\\System\\Net\\Sockets REGULAR_EXPRESSION "/Sources/Pcf/System/Net/Sockets/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Net\\WebSockets REGULAR_EXPRESSION "/Sources/Pcf/System/Net/WebSockets/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Net REGULAR_EXPRESSION "/Sources/Pcf/System/Net/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Runtime\\Serialization REGULAR_EXPRESSION "/Sources/Pcf/System/Runtime/Serialization/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Runtime REGULAR_EXPRESSION "/Sources/Pcf/System/Runtime/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Security REGULAR_EXPRESSION "/Sources/Pcf/System/Security/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Text REGULAR_EXPRESSION "/Sources/Pcf/System/Text/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Threading REGULAR_EXPRESSION "/Sources/Pcf/System/Threading/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System\\Threading\\Tasks REGULAR_EXPRESSION "/Sources/Pcf/System/Threading/Tasks/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources\\Pcf\\System REGULAR_EXPRESSION "/Sources/Pcf/System/[-_,A-Za-z0-9]+\\.(c*|h*)")
source_group(Sources\\Pcf REGULAR_EXPRESSION "/Sources/Pcf/[-_,A-Za-z0-9]+\\.c*")
source_group(Sources REGULAR_EXPRESSION "/Sources/[-_,A-Za-z0-9]+\\.c*")

add_library(Pcf.Core STATIC ${INCLUDE_FILES} ${SOURCE_FILES})
target_include_directories(Pcf.Core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Includes> $<INSTALL_INTERFACE:include>)
target_link_libraries(Pcf.Core call_stack ${CURL_LIBRARIES} easywsclient Rs232 ZLIB::ZLIB Threads::Threads ${STANDARD_CORE_LINK_LIBRARIES})
set_target_properties(Pcf.Core PROPERTIES FOLDER Pcf/Core)

if (BUILD_TESTS)
  #add_subdirectory("IntegrationTests")
  add_subdirectory("ManualTests")
  add_subdirectory("UnitTests")
endif()

install(TARGETS Pcf.Core EXPORT Pcf DESTINATION lib)
install(DIRECTORY "Includes/Pcf/." DESTINATION include/Pcf)
if (MSVC)
  target_compile_options(Pcf.Core PRIVATE "$<$<CONFIG:Debug>:/Fd$<TARGET_FILE_DIR:Pcf.Core>/Pcf.Core${CMAKE_DEBUG_POSTFIX}.pdb>")
  target_compile_options(Pcf.Core PRIVATE "$<$<CONFIG:Release>:/Fd$<TARGET_FILE_DIR:Pcf.Core>/Pcf.Core.pdb>")
  install(FILES $<TARGET_FILE_DIR:Pcf.Core>/Pcf.Core${CMAKE_DEBUG_POSTFIX}.pdb DESTINATION lib CONFIGURATIONS Debug OPTIONAL)
  install(FILES $<TARGET_FILE_DIR:Pcf.Core>/Pcf.Core.pdb DESTINATION lib CONFIGURATIONS Release OPTIONAL)
endif()
